--- a/news.html
+++ b/news.html
@@ -24,8 +24,7 @@
           <li><a href="index.html" class="nav-link px-2 text-white">Games</a></li>
           <li><a href="apps.html" class="nav-link px-2 text-white">Apps</a></li>
           <li><a href="webs.html" class="nav-link px-2 text-white">Webs</a></li>
-          <li><a href="cracks.html" class="nav-link px-2 text-white">Cracks</a></li>
-          <li><a href="news.html" class="nav-link px-2 text-white">News</a></li>
+          <li><a href="news.html" class="nav-link px-2 text-warning">News</a></li>
         </ul>
 
         <div class="text-end">
@@ -36,15 +35,20 @@
       </div>
     </div>
   </header>
-  
-  <main>
-  
+
     <main class="">
       <section class="py-5 text-center bg-dark">
-        <div class="row py-lg-5">
-          <div class="col-lg-6 col-md-8 mx-auto">
-            <h1 class="fw-light text-white press-start">Kiga News</h1>
-            <p class="lead text-y text-white">Đây là một trang web phi lợi nhuận được dùng để chia sẻ những thông tin mới nhất do Kiga Studio sản xuất. Mong được mọi người ủng hộ...</p>
+        <div class="row">
+          <div class="col-1">
+          </div>
+          <div class="col py-lg-4">
+            <h1 class="fw-light text-white press-start">Kiga News</h1> <br>
+            <p class="lead text-y text-white">Newest Update: Kiga Studio đã ra mắt tựa game Mobi đầu tiên<br> được phát hành trên Android.<br>Thông tin chi tiết truy cập Kiga News.</p>
+          </div>
+          <div class="col">
+            <img src="https://s.france24.com/media/display/e6279b3c-db08-11ee-b7f5-005056bf30b7/w:1024/p:16x9/news_en_1920x1080.jpg" width="420" height="240">
+          </div>
+          <div class="col-1">
           </div>
         </div>
       </section>
