--- a/webs.html
+++ b/webs.html
@@ -24,8 +24,7 @@
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="index.html" class="nav-link px-2 text-white">Games</a></li>
           <li><a href="apps.html" class="nav-link px-2 text-white">Apps</a></li>
-          <li><a href="webs.html" class="nav-link px-2 text-white">Webs</a></li>
-          <li><a href="cracks.html" class="nav-link px-2 text-white">Cracks</a></li>
+          <li><a href="webs.html" class="nav-link px-2 text-warning">Webs</a></li>
           <li><a href="news.html" class="nav-link px-2 text-white">News</a></li>
         </ul>
 
@@ -37,13 +36,22 @@
       </div>
     </div>
   </header>
-  
+
   <main class="">
     <section class="py-5 text-center bg-dark">
-      <div class="row py-lg-5">
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light text-white press-start">Kiga Webs</h1>
-          <p class="lead text-y text-white">Đây là một trang web phi lợi nhuận được dùng để chia sẻ những web do Kiga Studio sản xuất. Mong được mọi người ủng hộ...</p>
+      <div class="row">
+        <div class="col-1">
+        </div>
+        <div class="col py-lg-4">
+          <h1 class="fw-light text-white press-start">Kiga Webs</h1> <br>
+          <p class="lead text-y text-info">Blue: New Webs</p>
+          <p class="lead text-y text-success">Green: New Update</p>
+          <p class="lead text-y text-danger">Red: Shut Down</p>
+        </div>
+        <div class="col">
+          <img src="img/kigagame.jpg" width="420" height="240">
+        </div>
+        <div class="col-1">
         </div>
       </div>
     </section>
@@ -53,7 +61,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
-              <img src="img/web1.jpg" height="225"> 
+              <img src="img/kigagame.jpg" height="225"> 
               <div class="card-body">
                 <h2>Kiga Webs</h2>
                 <p class="card-text">Kiga Webs là website chia sẻ những trang web của Kiga Studio, trong trang web này còn có cả games, apps thậm chí là cracks.</p>
@@ -62,36 +70,6 @@
                     <a href="webs.html" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Go</button></a>
                   </div>
                   <small class="text-body-secondary">Free | Web</small>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="img/commingsoon.png" height="225"> 
-              <div class="card-body">
-                <h2></h2>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Go</button></a>
-                </div>
-                <small class="text-body-secondary">Free | Web</small>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="img/commingsoon.png" height="225"> 
-              <div class="card-body">
-                <h2></h2>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Go</button></a>
-                </div>
-                <small class="text-body-secondary">Free | Web</small>
                 </div>
               </div>
             </div>
