--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/dodge-boom?secret=pnEVL0RJrHD5lZKDYLcjj6a4cno" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/dodge-boom-web?secret=nf1GA9drah4PplXBLkSR4FiPhc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                     <a href="download/DodgeBoom.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
-                  <small class="text-body-secondary">PC | Mobile</small>
+                  <small class="text-body-secondary">PC | Web | Mobile</small>
                 </div>
               </div>
             </div>
@@ -101,8 +102,9 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/just-aim-and-shoot?secret=1RzyJGGveRgKypmV1HBlklOYtU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/just-aim-and-shoot-web?secret=JeI7goyOc6ypbVqKpPku4p4fqHo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">PC</small>
+                  <small class="text-body-secondary">PC | Web</small>
                 </div>
               </div>
             </div>
