--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <p class="card-text">Fake Mai Cờ Ráp Beta.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/mai-cap?secret=1AGZxeIbiHv7Ax8NqfMYYgvw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">PC</small>
                 </div>
@@ -84,7 +84,7 @@
                 <p class="card-text">Game bắn súng online đầu tiên. Không chơi được CSGO vs Valo thì tải về chơi cùng anh em cho vui. Tự xét điều kiện thắng vì game này không win được đâu.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/truy-kid?secret=h3c0pPvFZDKMpO7NC8X9WXU1XU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">PC</small>
                 </div>
