--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
+              <img src="img/bong/Screenshot-20-05-2024 13_43_37.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Bong</h3>
+                <p class="card-text">Bong là một game cực kì đơn giản rồi nhưng mà chơi thì vẫn cứ cuốn.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/bong?secret=PZ9hNv6uQGTneLfW7yLq0fezc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/bong-web?secret=gbEWguHHTpYYCTz10dws7LRXY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">PC | Web</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
               <img src="img/maicap/Screenshot 19-05-2024 212707.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text-info">Mai Cap</h3>
@@ -95,7 +111,7 @@
             <div class="card shadow-sm">
               <img src="img/dodgeboom/Screenshot 11-05-2024 223440.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-info">Dodge Boom</h3>
+                <h3 class="text-success">Dodge Boom</h3>
                 <p class="card-text">Dodge Boom lại là một tựa game vô cùng đơn giản nhưng mà rất khó để thành thục. Nhiệm vụ của bạn là di chuyển chú cừu né khỏi những quả bom của đàn sói, liệu bạn có thể sống sót được bao lâu ?</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
