--- a/codes.html
+++ b/codes.html
@@ -24,8 +24,8 @@
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="index.html" class="nav-link px-2 text-white">Games</a></li>
           <li><a href="apps.html" class="nav-link px-2 text-white">Apps</a></li>
-          <li><a href="webs.html" class="nav-link px-2 text-warning">Webs</a></li>
-          <li><a href="codes.html" class="nav-link px-2 text-white">Codes</a></li>
+          <li><a href="webs.html" class="nav-link px-2 text-white">Webs</a></li>
+          <li><a href="codes.html" class="nav-link px-2 text-warning">Codes</a></li>
           <li><a href="news.html" class="nav-link px-2 text-white">News</a></li>
         </ul>
 
@@ -45,13 +45,13 @@
         <div class="col-1">
         </div>
         <div class="col py-lg-4">
-          <h1 class="fw-light text-white press-start">Kiga Webs</h1> <br>
-          <p class="lead text-y text-info">Blue: New Webs</p>
+          <h1 class="fw-light text-white press-start">Kiga Codes</h1> <br>
+          <p class="lead text-y text-info">Blue: New Codes</p>
           <p class="lead text-y text-success">Green: New Update</p>
           <p class="lead text-y text-danger">Red: Shut Down</p>
         </div>
         <div class="col">
-          <img src="img/kigagame.jpg" width="420" height="240">
+          <img src="img/code.jpg" width="420" height="240">
         </div>
         <div class="col-1">
         </div>
@@ -63,13 +63,14 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
-              <img src="img/kigagame.jpg" height="225"> 
+              <img src="https://play-lh.googleusercontent.com/T9nwXZt7c-vBHURUZEzGTjt-26_ZO-wOsY_yfFwgbpiN7xsgvnontolXnW7hw-HbUlc=w526-h296-rw" height="225"> 
               <div class="card-body">
-                <h2>Kiga Webs</h2>
-                <p class="card-text">Kiga Webs là website chia sẻ những trang web của Kiga Studio, trong trang web này còn có cả games, apps thậm chí là cracks.</p>
+                <h2>Pong Source</h2>
+                <p class="card-text">Tất cả Asset của game Pong đều ở đây</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="webs.html" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Go</button></a>
+                    <a href="codes.html" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://www.youtube.com/watch?v=8bkoDU-mx84&list=PLVip5RG3-2-OjErTX6JoRDKUNOHfMdOkW&ab_channel=Ki%E1%BB%87tG%C3%A0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play List</button></a>
                   </div>
                   <small class="text-body-secondary">21/05/24</small>
                 </div>
