--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
           <li><a href="index.html" class="nav-link px-2 text-warning">Games</a></li>
           <li><a href="apps.html" class="nav-link px-2 text-white">Apps</a></li>
           <li><a href="webs.html" class="nav-link px-2 text-white">Webs</a></li>
+          <li><a href="codes.html" class="nav-link px-2 text-white">Codes</a></li>
           <li><a href="news.html" class="nav-link px-2 text-white">News</a></li>
         </ul>
 
         <div class="text-end">
+          <a href="https://www.youtube.com/channel/UC6XTkd_u4tXzHfSU9xr7vSg" target="_blank"><button type="button" class="btn btn-outline-light me-2">Youtube</button></a>
           <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-outline-light me-2">Facebook</button></a>
           <a href="https://github.com/KietGa" target="_blank"><button type="button" class="btn btn-outline-light me-2">Github</button></a>
           <a href="Donate.html" target="_blank"><button type="button" class="btn btn-warning">Donate</button></a>
@@ -63,6 +65,21 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
+              <img src="https://img.freepik.com/free-vector/abstract-coming-soon-halftone-style-background-design_1017-27282.jpg?size=626&ext=jpg&ga=GA1.1.2082370165.1716422400&semt=ais_user" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Unity-chan GO!</h3>
+                <p class="card-text">Low Pakour phiên bản gái alime. (Comming Soon)</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/bong?secret=PZ9hNv6uQGTneLfW7yLq0fezc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">21/05/24</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
               <img src="img/bong/Screenshot-20-05-2024 13_43_37.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text-info">Bong</h3>
@@ -72,7 +89,7 @@
                     <a href="https://kiga-studio.itch.io/bong?secret=PZ9hNv6uQGTneLfW7yLq0fezc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/bong-web?secret=gbEWguHHTpYYCTz10dws7LRXY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">PC | Web</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -87,7 +104,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/mai-cap?secret=1AGZxeIbiHv7Ax8NqfMYYgvw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">PC</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -102,7 +119,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/truy-kid?secret=h3c0pPvFZDKMpO7NC8X9WXU1XU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">PC</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -119,7 +136,7 @@
                     <a href="https://kiga-studio.itch.io/dodge-boom-web?secret=nf1GA9drah4PplXBLkSR4FiPhc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                     <a href="download/DodgeBoom.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
-                  <small class="text-body-secondary">PC | Web | Mobile</small>
+                  <small class="text-body-secondary">21/05/24 </small>
                 </div>
               </div>
             </div>
@@ -134,7 +151,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">PC</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -150,7 +167,7 @@
                     <a href="https://kiga-studio.itch.io/just-aim-and-shoot?secret=1RzyJGGveRgKypmV1HBlklOYtU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/just-aim-and-shoot-web?secret=JeI7goyOc6ypbVqKpPku4p4fqHo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">PC | Web</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -167,7 +184,7 @@
                     <a href="https://kiga-studio.itch.io/koutplayed-web?secret=6TtYoOLJFS53d0XzH1NW6LZWtU4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                     <a href="download/KOutplayed!.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
-                  <small class="text-body-secondary">PC | Web | Mobile</small>
+                  <small class="text-body-secondary">21/05/24 </small>
                 </div>
               </div>
             </div>
@@ -184,7 +201,7 @@
                     <a href="https://kiga-studio.itch.io/low-parkour?secret=ac1pdHcW2XmkoyJLf8GIylpME" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/low-parkour-web?secret=N8upNECF741eEccKuY4opDkI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">   PC | Web</small>
+                  <small class="text-body-secondary">   21/05/24</small>
                 </div>
               </div>
             </div>
@@ -201,7 +218,7 @@
                     <a href="https://kiga-studio.itch.io/divisor-duel-web?secret=O0B0FA6yEZA31qMrc9Re1HrQUY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                     <a href="download/Divisor Duel.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
-                  <small class="text-body-secondary">PC | Web | Mobile</small>
+                  <small class="text-body-secondary">21/05/24 </small>
                 </div>
               </div>
             </div>
@@ -217,7 +234,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/kcaro?secret=GKBuThKXNYYoWU1EkjdwKDqKSs0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">   PC</small>
+                  <small class="text-body-secondary">   21/05/24</small>
                 </div>
               </div>
             </div>
@@ -232,7 +249,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/kcaro-lan?secret=T2JOtQdwupDqZdr5FUHyV7z7WL8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">   PC</small>
+                  <small class="text-body-secondary">   21/05/24</small>
                 </div>
               </div>
             </div>
@@ -247,7 +264,7 @@
                   <div class="btn-group">
                     <a href="download/Pig Dodge.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
-                  <small class="text-body-secondary">Mobile</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -266,7 +283,7 @@
                     <a href="https://kiga-studio.itch.io/finding-number-web?secret=SrsCVCCDDphGUMf48pfutfLP7xg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                     <a href="download/Finding Number.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
-                  <small class="text-body-secondary">   PC | Web | Mobile</small>
+                  <small class="text-body-secondary">   21/05/24 </small>
                 </div>
               </div>
             </div>
@@ -283,7 +300,7 @@
                     <a href="https://kiga-studio.itch.io/running-impact?secret=VEv7pEArHq2PPlEpyYqaHpZg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/running-impact-web?secret=ZNhWY3VjrPOMvxthReTHuitb0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">PC | Web</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -299,7 +316,7 @@
                     <a href="BattlePercent.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/battle-percent-20?secret=fU19mo6ufgowv6bx6Uo1GKLgWE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">  PC</small>
+                  <small class="text-body-secondary">  21/05/24</small>
                 </div>
               </div>
             </div>
@@ -316,7 +333,7 @@
                     <a href="https://kiga-studio.itch.io/floppy-bird?secret=ORIApYW6fBqXKjl4sg6aUFdWfI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/floppy-bird-web?secret=GBX4h2Rloz7ri7nKws7ktmLws" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">   PC | Web</small>
+                  <small class="text-body-secondary">   21/05/24</small>
                 </div>
               </div>
             </div>
@@ -333,7 +350,7 @@
                     <a href="https://kiga-studio.itch.io/merio-adventure?secret=pHGE4AQ49rf1EXzAX1YtxCH2k" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/merio-adventure-web?secret=EiCxFQ4Q3QZ0VYIzbx9ekXUloiE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">   PC | Web</small>
+                  <small class="text-body-secondary">   21/05/24</small>
                 </div>
               </div>
             </div>
@@ -350,7 +367,7 @@
                     <a href="EdenDragon.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/eden-dragon?secret=2QlRmN9vM9Uj5DNPskTOw6Cmjmc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">  PC</small>
+                  <small class="text-body-secondary">  21/05/24</small>
                 </div>
               </div>
             </div>
@@ -367,7 +384,7 @@
                     <a href="https://kiga-studio.itch.io/astrovila-quest-chapter-1?secret=Kr3iK6c9Nct2JhQdaigLzT8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/astrovila-quest-chapter-1-web?secret=eaCHlVkxH9oI1GFuYeVmaoEp8U" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">   PC | Web</small>
+                  <small class="text-body-secondary">   21/05/24</small>
                 </div>
               </div>
             </div>
@@ -383,7 +400,7 @@
                     <a href="SimpleSanke.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/simple-snake?secret=lRcvSZefs7PQVkjsUE4cWm50M" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">  PC</small>
+                  <small class="text-body-secondary">  21/05/24</small>
                 </div>
               </div>
             </div>
@@ -400,7 +417,7 @@
                     <a href="BattlePercent2.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/battle-percent-21?secret=Rq3ZRNT42K5gPOgDoXy3mF8nJc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">  PC</small>
+                  <small class="text-body-secondary">  21/05/24</small>
                 </div>
               </div>
             </div>
@@ -416,7 +433,7 @@
                     <a href="TryThis.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://scratch.mit.edu/projects/874792956/" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">  PC</small>
+                  <small class="text-body-secondary">  21/05/24</small>
                 </div>
               </div>
             </div>
@@ -432,7 +449,7 @@
                     <a href="Catch.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://scratch.mit.edu/projects/874924913/" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">  PC</small>
+                  <small class="text-body-secondary">  21/05/24</small>
                 </div>
               </div>
             </div>
@@ -448,7 +465,7 @@
                     <a href="TaoTap.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/tao-tap?secret=r3jFk9LZ1I0BaCyV38w7fIHYHfg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">  PC</small>
+                  <small class="text-body-secondary">  21/05/24</small>
                 </div>
               </div>
             </div>
@@ -462,7 +479,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                   </div>
-                  <small class="text-body-secondary">  PC</small>
+                  <small class="text-body-secondary">  21/05/24</small>
                 </div>
               </div>
             </div>
@@ -476,7 +493,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                   </div>
-                  <small class="text-body-secondary">  PC</small>
+                  <small class="text-body-secondary">  21/05/24</small>
                 </div>
               </div>
             </div>
@@ -496,7 +513,7 @@
   </footer>
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-Yv21/05/24rYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
