--- a/news.html
+++ b/news.html
@@ -24,10 +24,12 @@
           <li><a href="index.html" class="nav-link px-2 text-white">Games</a></li>
           <li><a href="apps.html" class="nav-link px-2 text-white">Apps</a></li>
           <li><a href="webs.html" class="nav-link px-2 text-white">Webs</a></li>
+          <li><a href="codes.html" class="nav-link px-2 text-white">Codes</a></li>
           <li><a href="news.html" class="nav-link px-2 text-warning">News</a></li>
         </ul>
 
         <div class="text-end">
+          <a href="https://www.youtube.com/channel/UC6XTkd_u4tXzHfSU9xr7vSg" target="_blank"><button type="button" class="btn btn-outline-light me-2">Youtube</button></a>
           <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-outline-light me-2">Facebook</button></a>
           <a href="https://github.com/KietGa" target="_blank"><button type="button" class="btn btn-outline-light me-2">Github</button></a>
           <a href="Donate.html" target="_blank"><button type="button" class="btn btn-warning">Donate</button></a>
@@ -66,7 +68,7 @@
                   <div class="btn-group">
                     <a href="News1.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                   </div>
-                  <small class="text-body-secondary">Free | Web</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -81,7 +83,7 @@
                   <div class="btn-group">
                     <a href="News2.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                   </div>
-                  <small class="text-body-secondary">Free | Web</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -96,7 +98,7 @@
                   <div class="btn-group">
                     <a href="News3.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                   </div>
-                  <small class="text-body-secondary">Free | Web</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
