--- a/apps.html
+++ b/apps.html
@@ -25,10 +25,12 @@
           <li><a href="index.html" class="nav-link px-2 text-white">Games</a></li>
           <li><a href="apps.html" class="nav-link px-2 text-warning">Apps</a></li>
           <li><a href="webs.html" class="nav-link px-2 text-white">Webs</a></li>
+          <li><a href="codes.html" class="nav-link px-2 text-white">Codes</a></li>
           <li><a href="news.html" class="nav-link px-2 text-white">News</a></li>
         </ul>
 
         <div class="text-end">
+          <a href="https://www.youtube.com/channel/UC6XTkd_u4tXzHfSU9xr7vSg" target="_blank"><button type="button" class="btn btn-outline-light me-2">Youtube</button></a>
           <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-outline-light me-2">Facebook</button></a>
           <a href="https://github.com/KietGa" target="_blank"><button type="button" class="btn btn-outline-light me-2">Github</button></a>
           <a href="Donate.html" target="_blank"><button type="button" class="btn btn-warning">Donate</button></a>
@@ -69,7 +71,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/kiga-mega-app?secret=QIeXPjk8BlUL3yeI3eG0txkDY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">PC</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -84,7 +86,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/ball-run?secret=qXueRaoI5GCTwAbk8Is1N2JPgYY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">PC</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -99,7 +101,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/kiga-card-gacha?secret=gV1bKhFo0wnMRhlR1qmwlznFfn0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">PC</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -114,7 +116,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/kiga-card-checker?secret=R0czk3A20Z55VYMW6CES1WFdiWg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">PC</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -129,7 +131,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/chat-server?secret=b7YW4SnWvWG29ve1klGyPDF4w" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">PC</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -144,7 +146,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/chat-room-client?secret=XEZL8Amrub53BO6mfqd1zgVKc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">PC</small>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
@@ -164,7 +166,7 @@
   </footer>
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-Yv21/05/24rYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
