--- a/codes.html
+++ b/codes.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <title>Kiga Webs &#128195;</title>
+    <title>Kiga Webs &#128191;</title>
 </head>
 
 <body class="hidden-x"> 
@@ -70,7 +70,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="codes.html" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://www.youtube.com/watch?v=8bkoDU-mx84&list=PLVip5RG3-2-OjErTX6JoRDKUNOHfMdOkW&ab_channel=Ki%E1%BB%87tG%C3%A0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play List</button></a>
+                    <a href="https://www.youtube.com/watch?v=NJThHrUta7Y&list=PLVip5RG3-2-OjErTX6JoRDKUNOHfMdOkW&index=1&t=5s&ab_channel=Ki%E1%BB%87tG%C3%A0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play List</button></a>
                   </div>
                   <small class="text-body-secondary">21/05/24</small>
                 </div>
