--- a/codes.html
+++ b/codes.html
@@ -65,7 +65,7 @@
             <div class="card shadow-sm">
               <img src="https://play-lh.googleusercontent.com/T9nwXZt7c-vBHURUZEzGTjt-26_ZO-wOsY_yfFwgbpiN7xsgvnontolXnW7hw-HbUlc=w526-h296-rw" height="225"> 
               <div class="card-body">
-                <h2>Pong Source</h2>
+                <h2 class="text-info">Pong Source</h2>
                 <p class="card-text">Tất cả Asset của game Pong đều ở đây</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
