--- a/codes.html
+++ b/codes.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <title>Kiga Webs &#128191;</title>
+    <title>Kiga Codes &#128191;</title>
 </head>
 
 <body class="hidden-x"> 
@@ -26,6 +26,7 @@
           <li><a href="apps.html" class="nav-link px-2 text-white">Apps</a></li>
           <li><a href="webs.html" class="nav-link px-2 text-white">Webs</a></li>
           <li><a href="codes.html" class="nav-link px-2 text-warning">Codes</a></li>
+          <li><a href="videos.html" class="nav-link px-2 text-white">Videos</a></li>
           <li><a href="news.html" class="nav-link px-2 text-white">News</a></li>
         </ul>
 
