--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <li><a href="apps.html" class="nav-link px-2 text-white">Apps</a></li>
           <li><a href="webs.html" class="nav-link px-2 text-white">Webs</a></li>
           <li><a href="codes.html" class="nav-link px-2 text-white">Codes</a></li>
+          <li><a href="videos.html" class="nav-link px-2 text-white">Videos</a></li>
           <li><a href="news.html" class="nav-link px-2 text-white">News</a></li>
         </ul>
 
