--- a/videos.html
+++ b/videos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<html>
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
@@ -9,10 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <title>Kiga News &#128227;</title>
+    <title>Kiga Videos &#128514;</title>
 </head>
 
-<body> 
+<body class="hidden-x"> 
   <header class="p-3 text-white bg-black">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -25,8 +26,8 @@
           <li><a href="apps.html" class="nav-link px-2 text-white">Apps</a></li>
           <li><a href="webs.html" class="nav-link px-2 text-white">Webs</a></li>
           <li><a href="codes.html" class="nav-link px-2 text-white">Codes</a></li>
-          <li><a href="videos.html" class="nav-link px-2 text-white">Videos</a></li>
-          <li><a href="news.html" class="nav-link px-2 text-warning">News</a></li>
+          <li><a href="videos.html" class="nav-link px-2 text-warning">Videos</a></li>
+          <li><a href="news.html" class="nav-link px-2 text-white">News</a></li>
         </ul>
 
         <div class="text-end">
@@ -39,71 +40,44 @@
     </div>
   </header>
 
-    <main class="">
-      <section class="py-5 text-center bg-dark">
-        <div class="row">
-          <div class="col-1">
-          </div>
-          <div class="col py-lg-4">
-            <h1 class="fw-light text-white press-start">Kiga News</h1> <br>
-            <p class="lead text-y text-white">Newest Update: Kiga Studio đã ra mắt tựa game Mobi đầu tiên<br> được phát hành trên Android.<br>Thông tin chi tiết truy cập Kiga News.</p>
-          </div>
-          <div class="col">
-            <img src="https://s.france24.com/media/display/e6279b3c-db08-11ee-b7f5-005056bf30b7/w:1024/p:16x9/news_en_1920x1080.jpg" width="420" height="240">
-          </div>
-          <div class="col-1">
-          </div>
+  <main class="">
+    <section class="py-5 text-center bg-dark">
+      <div class="row">
+        <div class="col-1">
         </div>
-      </section>
+        <div class="col py-lg-4">
+          <h1 class="fw-light text-white press-start">Kiga Videos</h1> <br>
+          <p class="lead text-y text-info">Blue: New Videos</p>
+          <p class="lead text-y text-success">Green: New Update</p>
+          <p class="lead text-y text-danger">Red: Shut Down</p>
+        </div>
+        <div class="col">
+          <img src="img/code.jpg" width="420" height="240">
+        </div>
+        <div class="col-1">
+        </div>
+      </div>
+    </section>
   
-    <div class="album py-5 bg-body-tertiary">
+    <div class="album py-5">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
-              <img src="img/news1/Slide4.PNG" height="225"> 
+              <img src="https://play-lh.googleusercontent.com/T9nwXZt7c-vBHURUZEzGTjt-26_ZO-wOsY_yfFwgbpiN7xsgvnontolXnW7hw-HbUlc=w526-h296-rw" height="225"> 
               <div class="card-body">
-                <h3>Tựa Game Đầu Tiên Của Kiga</h3>
-                <p class="card-text">Nhiều người đã biết tựa game đầu của Kiga là Battle Percent. Liệu bạn có tự hỏi phiên bản đầu tiên trông như thế nào, quá trình sản xuất ra sao, ra mắt bao giờ,... Post này sẽ giải đáp</p>
+                <h2 class="text-info">Pong Tutorial</h2>
+                <p class="card-text">Cách làm ra game Pong trên Unity</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="News1.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://www.youtube.com/watch?v=NJThHrUta7Y&list=PLVip5RG3-2-OjErTX6JoRDKUNOHfMdOkW&index=1&t=5s&ab_channel=Ki%E1%BB%87tG%C3%A0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play List</button></a>
                   </div>
                   <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="img/news2/Slide1.PNG" height="225"> 
-              <div class="card-body">
-                <h2>Battle Percent Tier List</h2>
-                <p class="card-text">Tier List của chính Kiga cho Battle Percent 2.0. Buff, Nerf tương lai sẽ liên quan đến Tier List này.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="News2.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                  </div>
-                  <small class="text-body-secondary">21/05/24</small>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="img/news3/Slide1.PNG" height="225"> 
-              <div class="card-body">
-                <h4>Những Game Sẽ Không Có Update</h4>
-                <p class="card-text">Đi đôi với việc ra mắt game mới thì việc update game cũ cũng rất quan trọng. Tuy nhiên đây là một số game sẽ không có update mới trong tương lai gần.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="News3.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                  </div>
-                  <small class="text-body-secondary">21/05/24</small>
-                </div>
-              </div>
-            </div>
-          </div>
+        </div>
       </div>
     </div>
   </main>
