--- a/codes.html
+++ b/codes.html
@@ -71,7 +71,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="codes.html" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://www.youtube.com/watch?v=NJThHrUta7Y&list=PLVip5RG3-2-OjErTX6JoRDKUNOHfMdOkW&index=1&t=5s&ab_channel=Ki%E1%BB%87tG%C3%A0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play List</button></a>
+                    <a href="https://www.youtube.com/watch?v=Ule3_14yBbQ&list=PL948RGO9v3bdZjwQRnhJzaMscHdqTnLUw&ab_channel=KigaStudio" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play List</button></a>
                   </div>
                   <small class="text-body-secondary">21/05/24</small>
                 </div>
